# ns9_1

./: Cargo.toml  LICENSE_MIT  base2048.txt  gen_tables.raku  package.json
page/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
page/src/: App.tsx  Area.tsx  Page.tsx  main.tsx
src/: b2048.rs  c2048.rs  dec_table.src  enc_table.src  lib.rs
